# spinnaker

./: .gitignore  Defunctionalize.hs  Demod.hs  HIRDefs.hs  HLDefs.hs  HLtoVM.hs  Interpreter.hs  KindTyper.hs  MGUs.hs  MPCL.hs  Main.hs  Monomorphizer.hs  OptimizeHL.hs  Parser.hs  PrettyPrinter.hs  README.md  ResultT.hs  SyntaxDefs.hs  TODO  TypeTyper.hs  Typer.hs  TypingDefs.hs  VM.hs  VariantComplete.hs  cabal.project  core  highlight.vim  main.hs  mops  run  runtests.sh  spinnaker.cabal  spinnaker.js
examples/: ackermann.spk  better_euler_sieve.spk  cartesian.spk  collatz.spk  comparedna.spk  enumChar.spk  euler_sieve  fac  fac.spk  fib.spk  fix.spk  fix2.spk  fizzbuzz  fizzbuzz.spk  floats.spk  generalized_fizzbuzz.spk  hanoi.spk  helloworld  helloworld.spk  instselect.spk  iota.spk  lcg.spk  listmonad.spk  lsystem.spk  matrix  matrix.spk  mergesort.spk  multiack  multimod.spk  n_queens.spk  newmod  ninetyninebottles.spk  putchr  quine.spk  statet.spk  strpat.spk  superrels.spk  test_division.spk  testbool.spk  textbox.spk  (+4 more)
examples/interactive/: zeroper.spk
examples/need_updates/: memofib  testcode
runtime/js/: spinnaker.js
runtime/scm/: spinnaker.scm
src/: ArgParser.hs  CompDefs.hs  Defunctionalize.hs  Demod.hs  HLDefs.hs  HLOps.hs  HLOptimize.hs  HLtoML.hs  HLtoVM.hs  MGUs.hs  MLDefs.hs  MLOps.hs  MLOptimize.hs  MLtoJS.hs  Main.hs  Monomorphizer.hs  OptimizeHL.hs  PrettyPrinter.hs  ResultT.hs  SyntaxDefs.hs  TypeTyper.hs  TypingDefs.hs
src/Backends/: MLtoJS.hs  MLtoSCM.hs
src/Backends/VM/: MLtoVM.hs  VM.hs
src/HL/: Defunctionalize.hs  HLOps.hs  HLOptimize.hs  Monomorphizer.hs
src/ML/: HLtoML.hs  MLOps.hs  MLOptimize.hs
src/Parser/: Demod.hs  MPCL.hs  Parser.hs
src/Typer/: KindTyper.hs  MGUs.hs  TypeTyper.hs  Typer.hs  TypingDefs.hs  VariantComplete.hs
src/VM/: HLtoVM.hs  MLtoVM.hs  VM.hs
stdlib/: core  core.spk  debug.spk  either.spk  list  list.spk  maybe  maybe.spk  monad  monad.spk  std  std.spk  text.spk
tests/: ackermann  addNum  church  collatz  composed  data  dataapp  enumChar  euler_sieve  evenodd  fac  fib  fibonacci  fix  fix2  fixlr  hanoi  head  headtail  helloworld  hintrestrict  incompleteDataDef  incompleteDef  instselect  iobind  iota  letpoly  listfuns  listmonad  lsystem  map  matrix  memofib  mergesort  monadtrans  multiack  multimod  multipat  myshow  n_queens  (+20 more)
tests/need_updates/: fix2  letpoly  state
vim/ftdetect/: spinnaker.vim
vim/syntax/: spinnaker.vim
