cabal-version:      2.4
name:               spinnaker
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis: The Spinnaker Programming Language

-- A longer description of the package.
description: TODO

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Caius Iulius Caesar
maintainer:         caiusiuliuscaesar84@gmail.com

-- A copyright notice.
-- copyright:
-- category:
-- extra-source-files: CHANGELOG.md

data-files: stdlib/

executable spinnaker
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:
        Defunctionalize
        HLDefs
        Monomorphizer
        OptimizeHL
        Parser.Demod
        Parser.MPCL
        Parser.Parser
        Paths_spinnaker
        PrettyPrinter
        ResultT
        SyntaxDefs
        Typer.KindTyper
        Typer.MGUs
        Typer.TypeTyper
        Typer.Typer
        Typer.TypingDefs
        Typer.VariantComplete
        VM.HLtoVM
        VM.VM
    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.17.0.0, mtl, containers
    hs-source-dirs:   src
    default-language: Haskell2010
