cabal-version:      2.4
name:               spinnaker
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis: The Spinnaker Programming Language

-- A longer description of the package.
description: TODO

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Caius Iulius Caesar
maintainer:         caiusiuliuscaesar84@gmail.com

-- A copyright notice.
-- copyright:
-- category:
-- extra-source-files: CHANGELOG.md

data-files: runtime/ stdlib/

executable spinnaker
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:
        Paths_spinnaker
        CompDefs
        ArgParser
        ResultT
        PrettyPrinter

        Parser.MPCL
        SyntaxDefs
        Parser.Parser
        Parser.Demod

        HLDefs
        HL.HLOps
        Typer.TypingDefs
        Typer.MGUs
        Typer.KindTyper
        Typer.VariantComplete
        Typer.TypeTyper
        Typer.Typer

        HL.Monomorphizer
        HL.HLOptimize
        HL.Defunctionalize

        MLDefs
        ML.MLOps
        ML.HLtoML
        ML.MLOptimize

        Backends.VM.MLtoVM
        Backends.VM.VM
        Backends.MLtoJS
        Backends.MLtoSCM
    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.17.0.0, mtl, containers
    hs-source-dirs:   src
    default-language: Haskell2010
